<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_gravity="center"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/gray">

    <TextView
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_margin="10dp"
        android:text="@string/delete_note" />

    <TextView
        style="@style/DescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="10dp"
        android:text="@string/it_will_be_impossible_to_cancel_this_action" />

    <TextView
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/no"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/yes"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold" />

</androidx.cardview.widget.CardView>