<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".presentation.view.note.NoteFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@id/dateText"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/back" />

        <ImageButton
            android:id="@+id/confirmButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="17dp"
            android:background="@drawable/ic_confirm"
            android:contentDescription="@string/save" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/dateText"
        style="@style/DateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="17dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/titleEditText"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="date: 21.01.2023 17:19" />

    <EditText
        android:id="@+id/titleEditText"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="17dp"
        android:hint="@string/title"
        android:inputType="text"
        android:maxLines="1"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/descriptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateText"
        tools:text="note title" />

    <EditText
        android:id="@+id/descriptionEditText"
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:padding="17dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleEditText"
        tools:text="note description" />

    <ImageButton
        android:id="@+id/deleteNoteButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="end"
        android:layout_margin="20dp"
        android:background="@drawable/ic_delete"
        android:contentDescription="@string/delete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>